src/test/ui/associated-type-bounds/issue-71443-1.stderr
error[E0308]: mismatched types
  --> $DIR/issue-71443-1.rs:6:5
   |
LL | fn hello<F: for<'a> Iterator<Item: 'a>>() {
   |                                           - help: try adding a return type: `-> Incorrect`
LL |     Incorrect
   |     ^^^^^^^^^ expected `()`, found struct `Incorrect`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
